[gd_scene load_steps=10 format=3 uid="uid://ja24qlkbra3f"]

[ext_resource type="Script" path="res://scripts/scene_2.gd" id="1_shfdb"]
[ext_resource type="Texture2D" uid="uid://pwhxhid70tkl" path="res://assets/background/outside_castle.png" id="2_ilawo"]
[ext_resource type="Texture2D" uid="uid://pcswvjot8f2k" path="res://assets/portraits/mysterious_man_neutral_1.png" id="3_pq6yt"]
[ext_resource type="Texture2D" uid="uid://ca525to53ksl0" path="res://assets/portraits/princess_outfit_1.png" id="5_asb7m"]
[ext_resource type="Texture2D" uid="uid://w23mgl37apm0" path="res://assets/portraits/princess_outfit_1_head_neutral.png" id="6_ymjux"]
[ext_resource type="Texture2D" uid="uid://cvf54hgp2eijv" path="res://assets/ui/message_window_1.png" id="7_kreb4"]
[ext_resource type="Texture2D" uid="uid://k72v007dxr2r" path="res://assets/ui/ui_next_button.gif" id="8_31oou"]
[ext_resource type="Texture2D" uid="uid://b6yw05pue20u" path="res://assets/ui/ui_next_button_hover.gif" id="9_83anq"]
[ext_resource type="Theme" uid="uid://dejysjjwhwal8" path="res://data/theme/title_theme.tres" id="10_lwiu0"]

[node name="Scene2" type="CanvasLayer"]
script = ExtResource("1_shfdb")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -149.0
offset_top = 1.0
offset_right = 1333.0
offset_bottom = 666.0
texture = ExtResource("2_ilawo")
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -17.0
offset_right = -1.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0156863, 0.0156863, 0.564706)
metadata/_edit_lock_ = true

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="MysteriousMan" type="Sprite2D" parent="."]
position = Vector2(318, 339)
scale = Vector2(1.595, 1.3)
texture = ExtResource("3_pq6yt")

[node name="MainCharacter" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 52.0
offset_top = -257.0
offset_right = 568.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="body" type="Sprite2D" parent="MainCharacter"]
position = Vector2(-70, 208)
texture = ExtResource("5_asb7m")
centered = false

[node name="head" type="Sprite2D" parent="MainCharacter"]
position = Vector2(235, 127)
texture = ExtResource("6_ymjux")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -462.0
offset_top = -230.0
offset_right = 477.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("7_kreb4")
expand_mode = 3
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
custom_minimum_size = Vector2(800, 160)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 28.0
offset_right = -110.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 24

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
custom_minimum_size = Vector2(52, 60)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.4285
offset_top = -77.0
offset_right = -23.4285
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
action_mode = 0
texture_normal = ExtResource("8_31oou")
texture_hover = ExtResource("9_83anq")

[node name="TutorialPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -168.0
offset_right = 270.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_lwiu0")

[node name="TutorialText" type="RichTextLabel" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 21.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.94902, 0.368627, 0.576471, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center][b]Thank you for playing![/b]

[font_size={25}]You completed the first dungeon![/font_size]

Thank you for playing the first chapter of my game Just a Girl's Dungeon Quest!
There is still more development to do. 

Press SPACE or ENTER to return to the title screen.
[/center]"
scroll_active = false

[connection signal="timeout" from="TypingTimer" to="." method="_on_typing_timer_timeout"]
